src/objects/Customer_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Authorised_By__c</fullName>
        <label>Authorised By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_Position__c</fullName>
        <label>Authorised Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit/Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Reference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Approvals</relationshipLabel>
        <relationshipName>Customer_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Reference__c</fullName>
        <label>Purchase Order Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used by the code to determine what type of record it is so that it can trigger task creation etc if required.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Approval</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Customer Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>